--- a/.github/workflows/Shaw.yml
+++ b/.github/workflows/Shaw.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@pradeep
+        uses: actions/checkout@main
