--- a/.github/workflows/Shaw.yml
+++ b/.github/workflows/Shaw.yml
@@ -6,3 +6,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@main
+      - run: |
+          docker build -t Korversion:1.0.0 Applicationcode1
+          
