--- a/.github/workflows/Shaw.yml
+++ b/.github/workflows/Shaw.yml
@@ -10,3 +10,6 @@ jobs:
           docker build -t korversion:1.0.0 Applicationcode1
           docker images
           docker login ${{ secrets.JFROG_URL1 }} --username ${{ secrets.JFROG_USERNAME }} --password ${{ secrets.JFROG_API1 }}
+          docker tag korversion:1.0.0 asuuki.jfrog.io/korrepository/korversion:1.0.0
+          docker images
+          docker push asuuki.jfrog.io/pradeep/korversion:1.0.0
