--- a/.github/workflows/Shaw.yml
+++ b/.github/workflows/Shaw.yml
@@ -12,4 +12,4 @@ jobs:
           docker login ${{ secrets.JFROG_URL1 }} --username ${{ secrets.JFROG_USERNAME }} --password ${{ secrets.JFROG_API1 }}
           docker tag korversion:1.0.0 asuuki.jfrog.io/korrepository/korversion:1.0.0
           docker images
-          docker push asuuki.jfrog.io/pradeep/korversion:1.0.0
+          docker push asuuki.jfrog.io/korrepository/korversion:1.0.0
