--- a/.github/workflows/Shaw.yml
+++ b/.github/workflows/Shaw.yml
@@ -15,6 +15,6 @@ jobs:
           docker push asuuki.jfrog.io/korrepository/korversion:1.0.0
           az login --service-principal --username ${{ secrets.REGISTRY_USERNAME1 }} --password ${{ secrets.REGISTRY_PASSWORD1 }} --tenant 3d993c04-128c-48de-ba4a-1afbb101cfa1
           az acr login --name ${{ secrets.REGISTRY_LOGIN_SERVER1 }}
-          docker tag asuuki.jfrog.io/korrepository/korversion:1.0.0 ${{ secrets.REGISTRY_LOGIN_SERVER }}/korversion:1.0.0
+          docker tag asuuki.jfrog.io/korrepository/korversion:1.0.0 ${{ secrets.REGISTRY_LOGIN_SERVER1 }}/korversion:1.0.0
           docker images
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/korversion:1.0.0
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER1 }}/korversion:1.0.0
