--- a/kubemanifest/service.yml
+++ b/kubemanifest/service.yml
@@ -2,13 +2,10 @@ apiVersion: v1
 kind: Service 
 metadata:
   name: pradeep-loadbalancer-service
-  labels:
-    app: frontend-nginxapp
-    tier: frontend  
 spec:
   type: LoadBalancer # ClusterIp, # NodePort
   selector:
-    app: frontend-nginxapp
+    app: myapp3
   ports: 
     - name: http
       port: 80 # Service Port
