--- a/.github/workflows/JfrogToAKS.yml
+++ b/.github/workflows/JfrogToAKS.yml
@@ -1,4 +1,4 @@
-name : Build and Push Docker image to ACR
+name : Build and Push Docker image to AKS
 'on' : push
 jobs:
   build:
@@ -12,3 +12,21 @@ jobs:
           docker login ${{ secrets.JFROG_URL1 }} --username ${{ secrets.JFROG_USERNAME }} --password ${{ secrets.JFROG_API1 }}
           docker tag korversion:2.0.0 asuuki.jfrog.io/pradeep-local/korversion:2.0.0
           docker push asuuki.jfrog.io/pradeep-local/korversion:2.0.0
+          
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main  # Use stable version
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v1
+        with:
+          version: 'latest'  # Optionally specify the version you want
+      - name: Deployment to AKS
+        run: | 
+             az login --service-principal --username ${{ secrets.REGISTRY_USERNAME1 }} --password ${{ secrets.REGISTRY_PASSWORD1 }} --tenant 3d993c04-128c-48de-ba4a-1afbb101cfa1
+             az aks get-credentials --resource-group Dev-AKS-Cluster_group --name Dev-AKS-Cluster --overwrite-existing
+             kubectl apply -f kubemanifestfile/deployment.yml -f kubemanifestfile/Service.yml
+             
+             
